--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,29 +4,22 @@ FROM python:3.11-bullseye
 # Set up a working directory
 WORKDIR /workspace
 
-# Copy the entire workspace
-COPY .. /workspace
+# Copy requirements.txt first for better caching
+COPY ../requirements.txt /workspace/
 
-# Install system dependencies if packages.txt exists
-RUN if [ -f packages.txt ]; then \
-      apt-get update && \
-      apt-get upgrade -y && \
-      xargs apt-get install -y < packages.txt; \
-    fi
+# Install Python dependencies
+RUN pip install -r requirements.txt
 
-# Install Python dependencies with retry logic
-RUN if [ -f requirements.txt ]; then \
-      pip install --no-cache-dir --retries 3 --timeout 60 -r requirements.txt; \
-    fi
+# Copy the rest of the workspace
+COPY .. /workspace/
 
-# Always install streamlit with retry logic
-RUN pip install --no-cache-dir --retries 3 --timeout 60 streamlit
+# Always install streamlit (in case it's not in requirements.txt)
+RUN pip install streamlit
 
-# Set environment variables for Python
-ENV PYTHONUNBUFFERED=1
+RUN mkdir -p ~/.streamlit/
+RUN echo "[general]"  > ~/.streamlit/credentials.toml
+RUN echo "email = \"\""  >> ~/.streamlit/credentials.toml
 
-# Expose the default Streamlit port
 EXPOSE 8501
 
-# Default command (can be overridden by postAttachCommand)
-CMD ["bash"] 
+CMD ["streamlit", "run", "app.py"]
