--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,8 @@
 {
   "name": "Python 3",
   "build": {
-    "dockerfile": "Dockerfile",
-    "args": {
-      "BUILDKIT_INLINE_CACHE": "1"
-    },
+    "dockerfile": "./Dockerfile",
+    "context": "..",
     "options": ["--network=host"]
   },
   "customizations": {
@@ -22,18 +20,5 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run streamlit_app.py --server.enableCORS false --server.enableXsrfProtection false"
-  },
-  "portsAttributes": {
-    "8501": {
-      "label": "Application",
-      "onAutoForward": "openPreview"
-    }
-  },
-  "forwardPorts": [
-    8501
-  ],
   "runArgs": ["--network=host"]
 }
